--- a/mlp_model.ipynb
+++ b/mlp_model.ipynb
@@ -40,8 +40,7 @@
         "outputId": "4443a988-dd44-4890-b58c-46b5994187ab"
       },
       "source": [
-        "import numpy as np\n",
-        "import pandas as pd\n",
+        "import torch\n",
         "import torch.nn as nn\n",
         "\n",
         "class MLP(nn.Module):  \n",
